--- a/src/componente/Home/Home.css
+++ b/src/componente/Home/Home.css
@@ -79,10 +79,7 @@ body{
   .ad-section{
     padding: 80px 0;
   }
-  
-  .ad-bannar{
-  
-  }
+
   .ad-picture{
     border-radius: 50px;
     text-align: center;
@@ -194,9 +191,6 @@ body{
   }
 
 
-  .machines-section{
-  
-  }
   .machines{
    text-align: center;
    margin: 0 auto;
@@ -264,21 +258,14 @@ body{
     margin-top: 150px;
     padding: 0;
     }
-    .about-item{
-    
-    }
+   
 
     .drag-height-width {
       width: 22%;
   }
 
 
-  .card-title{
-
-  }
-  .card-text{
-    
-  }
+ 
 
 
 
@@ -312,24 +299,14 @@ body{
   width: 100%;
 }
 
-.booking-header{
-   
-}
-.booking-header h1{
 
-}
-.booking-fees{
-  
-}
 .booking-fees h1 {
     font-size: 25px;
 }
 .booking-para{
    width: 100%;
 }
-.booking-para p{
 
-}
 .booking-from {
     width: 40%;
     margin-left: 10%;
@@ -353,9 +330,6 @@ body{
 .from{
     margin: 30px 0 0 25px;
 }
-.submit-btn{
-    
-}
 
 
 /* /////////// end ///// */
@@ -376,9 +350,7 @@ border-radius: 10px;
  margin: 0 auto;
  padding: 20px;
 }
-.login-item{
 
-}
 .login-item h1{
  text-align: center;
 }
@@ -399,6 +371,166 @@ border-radius: 10px;
 
 /* ///// END /////// */
 
+
+.redirect-alart {
+  display: flex;
+  width: 22%;
+  height: 20%;
+  border: 1px solid rgb(149 137 137);
+  border-radius: 5px;
+  top: 17.2%;
+  left: 4.4%;
+  position: absolute;
+  background: #ffffff;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon {
+  width: 40px;
+  height: 40px;
+  color: green;
+}
+.icon1 {
+  width: 40px;
+  height: 40px;
+  color: #c93232;
+}
+
+.redirect-text {
+  text-align: center;
+  margin: 0 2.7%;
+}
+.redirect-text p {
+  margin: 0 auto;
+}
+.progress-bar-body {
+  background: white;
+  display: flex;
+  width: 22%;
+  height: 20%;
+  top: 17.2%;
+  right: 4.4%;
+  position: absolute;
+  border: 1px solid rgb(149 137 137);
+  border-radius: 5px;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+}
+.thanks-giving{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 5% 0;
+}
+.thanks-giving p{
+
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 98%;
+}
+.face-icon{
+  color: green;
+  margin: 3%;
+  font-size: 5vh;
+}
+.progress {
+  background: rgba(255, 255, 255, 0.1);
+  justify-content: flex-start;
+  border-radius: 100px;
+  align-items: end;
+  position: absolute;
+
+  display: flex;
+  height: 10%;
+  width: 100%;
+  bottom: 0;
+}
+
+.progress-value {
+  animation: load 3s normal forwards;
+  box-shadow: 0 10px 40px -10px #fff;
+  border-radius: 100px;
+  background: #ac0202;
+  height: 6.6px;
+  width: 100%;
+}
+
+@keyframes load {
+  0% { width: 0; }
+  100% { width: 100%; }
+}
+
+
+@keyframes rotate-circle {
+  0% {
+    transform: rotate(-45deg);
+  }
+  5% {
+    transform: rotate(-45deg);
+  }
+  12% {
+    transform: rotate(-405deg);
+  }
+  100% {
+    transform: rotate(-405deg);
+  }
+}
+
+@keyframes icon-line-tip {
+  0% {
+    width: 0;
+    left: 1px;
+    top: 19px;
+  }
+  54% {
+    width: 0;
+    left: 1px;
+    top: 19px;
+  }
+  70% {
+    width: 50px;
+    left: -8px;
+    top: 37px;
+  }
+  84% {
+    width: 17px;
+    left: 21px;
+    top: 48px;
+  }
+  100% {
+    width: 25px;
+    left: 14px;
+    top: 45px;
+  }
+}
+
+@keyframes icon-line-long {
+  0% {
+    width: 0;
+    right: 46px;
+    top: 54px;
+  }
+  65% {
+    width: 0;
+    right: 46px;
+    top: 54px;
+  }
+  84% {
+    width: 55px;
+    right: 0px;
+    top: 35px;
+  }
+  100% {
+    width: 47px;
+    right: 8px;
+    top: 38px;
+  }
+}
+
+
    @media (min-width :992px) and (max-width:1199px){
     .service-inner-item-header h2 {
       font-size: 236%;
@@ -415,6 +547,13 @@ border-radius: 10px;
   width: 50%;
   font-size: 90%;
   height: auto;
+}
+
+.thanks-giving p {
+
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 80%;
 }
    }
    @media (min-width :768px) and (max-width:991px){
@@ -501,7 +640,8 @@ border-radius: 10px;
   margin: 0 auto;
   padding: 20px;
 }
-
+.thanks-giving p {
+  font-size: 66.5%;}
 
    }
    @media (min-width :576px) and (max-width:767px){
@@ -608,6 +748,11 @@ border-radius: 10px;
   border-radius: 10px;
   margin: 0 auto;
   padding: 20px;
+}
+.thanks-giving p {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 54%;
 }
 
 
@@ -744,5 +889,28 @@ border-radius: 10px;
   border-radius: 10px;
   margin: 0 auto;
   padding: 20px;
+}
+
+.face-icon {
+  color: green;
+  margin: 3%;
+  font-size: 3vh;
+}
+.thanks-giving p {
+  font-size: 53%;
+}
+.redirect-text {
+  text-align: center;
+  margin: 0 2.7%;
+}
+.redirect-text p {
+  font-size: 54%;
+  margin: 0 auto;
+}
+.icon{
+  width: 20px;
+}
+.icon1{
+  width: 20px;
 }
   }
