--- a/src/componente/Home/Home.css
+++ b/src/componente/Home/Home.css
@@ -754,6 +754,15 @@ border-radius: 10px;
   font-family: sans-serif;
   font-size: 54%;
 }
+.redirect-text p{
+  font-size: 80%;
+}
+.icon{
+  width: 26px;
+}
+.icon1{
+  width: 26px;
+}
 
 
    }
